Fix: fix navbar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 /* GRID */
 
 .container {
-    max-width: 1080px;
+    /* max-width: 1080px; */
     margin: 0 auto;
     padding-left: var(--grid-padding);
     padding-right: var(--grid-padding);
@@ -128,6 +128,12 @@ main {
     color: var(--primary-text-color);
 }
 
+#nav #home li,
+#nav #playlist,
+#nav #user-id {
+    border-left: 2px solid transparent;
+}
+
 #nav #home li:first-child {
     border-left: 2px solid var(--lime-effect);
 }
@@ -174,6 +180,7 @@ main {
 
 #nav #user-id {
     margin-top: auto;
+    padding: 0 10px;
 }
 
 #nav #user-id .layer {
